# ARA

./: Cargo.toml  LICENSE  README.md
ara/: Cargo.toml
ara-cli/: Cargo.toml
ara-cli/src/: config.rs  main.rs
ara/src/: config.rs  file.rs  lib.rs  log.rs  stack.rs  state.rs
ara/src/graph/: edge.rs  layer.rs  mod.rs  node.rs
ara/src/input/: mod.rs  toml.rs  tree.rs
ara/src/parse/: mod.rs  utils.rs
examples/: README.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/axum/src/routes/: mod.rs
src/: config.rs  file.rs  log.rs  main.rs  stack.rs  state.rs
src/graph/: edge.rs  layer.rs  mod.rs  node.rs
src/input/: toml.rs  tree.rs
src/parse/: mod.rs
tests/: Cargo.toml  parse.rs
